Fixes #3694 — `bottom: -1px; padding-bottom: 1px` on fixed footer, previously used to hide 1px “jitter” seen in many browsers during scroll, was triggering scrollbars in some browsers.

--- a/css/structure/jquery.mobile.fixedToolbar.css
+++ b/css/structure/jquery.mobile.fixedToolbar.css
@@ -9,10 +9,6 @@
 .ui-header-fixed {
 	top: 0;
 }
-.ui-footer-fixed {
-	bottom: -1px;
-	padding-bottom: 1px;
-}
 .ui-header-fullscreen,
 .ui-footer-fullscreen {
 	opacity: .9;
